--- a/src/css/index.css
+++ b/src/css/index.css
@@ -60,6 +60,11 @@ body {
   /* align-content: space-between; */
 }
 
+#colorBadge {
+  display: flex;
+  flex-direction: row;
+}
+
 #headingone {
   font-size: 29px;
   font-weight: bold;
